--- a/rpt/OH004_IncomesAllByPriceCodes.jrxml
+++ b/rpt/OH004_IncomesAllByPriceCodes.jrxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="OH004_IncomesAllByPriceCodes" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" uuid="6fc74f9d-71c2-41d2-be36-6a7a430fd24b">
+<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="OH004_IncomesAllByPriceCodes" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" resourceBundle="OH004_IncomesAllByPriceCodes" whenResourceMissingType="Key" uuid="6fc74f9d-71c2-41d2-be36-6a7a430fd24b">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
@@ -42,7 +43,7 @@ ORDER BY AMOUNT DESC]]>
 			<rectangle radius="0">
 				<reportElement key="rectangle-1" mode="Opaque" x="0" y="1" width="535" height="48" forecolor="#00CCCC" backcolor="#000099" uuid="6e8035eb-c404-4ed7-a4ea-9b2a4abc606d"/>
 			</rectangle>
-			<staticText>
+			<textField>
 				<reportElement key="staticText" x="5" y="5" width="468" height="40" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="f8f9e835-f18a-44a5-8b42-4ae21dc3c424"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -54,8 +55,8 @@ ORDER BY AMOUNT DESC]]>
 					<font fontName="Arial" size="24" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 					<paragraph lineSpacing="Single"/>
 				</textElement>
-				<text><![CDATA[PriceCodes Ranking]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{PricecodesRanking}]]></textFieldExpression>
+			</textField>
 			<image>
 				<reportElement key="image-1" x="476" y="5" width="56" height="40" uuid="21ecd662-2bcf-4f89-adc1-bbdf813fa4ab"/>
 				<box>
@@ -66,7 +67,7 @@ ORDER BY AMOUNT DESC]]>
 				</box>
 				<imageExpression><![CDATA[$P{PATHLOGO} + "Splash.jpg"]]></imageExpression>
 			</image>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-4" x="0" y="49" width="535" height="22" uuid="acaabdc7-c703-4b4e-9fc7-c3538fce288d"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -79,7 +80,7 @@ ORDER BY AMOUNT DESC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Hospital}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-5" x="0" y="71" width="535" height="17" uuid="9a6ddc6d-e811-4576-9572-6d8513c28b42"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -92,7 +93,7 @@ ORDER BY AMOUNT DESC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Address} + " - " + $P{City}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-7" x="0" y="105" width="535" height="17" uuid="89467861-cae5-451b-a3d3-bf1387688114"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -105,7 +106,7 @@ ORDER BY AMOUNT DESC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Telephone}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement key="textField-15" x="65" y="122" width="64" height="17" uuid="390d6fcf-9b89-4c1e-8ce2-653e09f8dd65"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -118,7 +119,7 @@ ORDER BY AMOUNT DESC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fromdate}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-2" x="0" y="122" width="65" height="17" uuid="8c28f75f-3ef8-4ac7-820a-30e7e767567f"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -129,9 +130,9 @@ ORDER BY AMOUNT DESC]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[From]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{From}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-3" x="129" y="122" width="65" height="17" uuid="453b7a0f-8247-4d0c-a355-89d08de7f838"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -142,9 +143,9 @@ ORDER BY AMOUNT DESC]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[To]]></text>
-			</staticText>
-			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="false">
+				<textFieldExpression><![CDATA[$R{To}]]></textFieldExpression>
+			</textField>
+			<textField textAdjust="StretchHeight" pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement key="textField-16" x="194" y="122" width="64" height="17" uuid="cdfefb96-af60-425a-99c6-c5974d5aab77"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -157,7 +158,7 @@ ORDER BY AMOUNT DESC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{todate}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-17" x="0" y="88" width="535" height="17" uuid="f790e60d-0fbf-4cd5-a354-3596745fd302"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -236,7 +237,7 @@ ORDER BY AMOUNT DESC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{TOTAL}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-1" x="327" y="0" width="100" height="18" uuid="c0bb92ea-3303-4b9f-a058-caa0172d56fe"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -247,8 +248,8 @@ ORDER BY AMOUNT DESC]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[TOTAL]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Total}]]></textFieldExpression>
+			</textField>
 		</band>
 	</columnFooter>
 	<pageFooter>
