--- a/rpt/OH009_InPatientReport.jrxml
+++ b/rpt/OH009_InPatientReport.jrxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="OH009_InPatientReport" pageWidth="992" pageHeight="595" orientation="Landscape" columnWidth="932" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" uuid="686e5ce3-e1e1-4923-8646-fd201e4b39d3">
+<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="OH009_InPatientReport" pageWidth="992" pageHeight="595" orientation="Landscape" columnWidth="932" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" resourceBundle="OH009_InPatientReport" whenResourceMissingType="Key" uuid="686e5ce3-e1e1-4923-8646-fd201e4b39d3">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -73,7 +74,7 @@ ORDER BY ADM_DATE_DIS]]>
 			<rectangle radius="0">
 				<reportElement key="rectangle-1" mode="Opaque" x="0" y="1" width="932" height="48" forecolor="#00CCCC" backcolor="#000099" uuid="28313a3d-f1d2-4b6e-913c-a29c2a5edf13"/>
 			</rectangle>
-			<staticText>
+			<textField>
 				<reportElement key="staticText" x="5" y="5" width="865" height="40" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="81115670-76a4-4dc3-a121-0dab3668d0df"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -84,9 +85,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Justified" verticalAlignment="Top" rotation="None">
 					<font fontName="Arial" size="24" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
-				<text><![CDATA[InPatient]]></text>
-			</staticText>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+				<textFieldExpression><![CDATA[$R{InPatient}]]></textFieldExpression>
+			</textField>
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-4" x="0" y="49" width="932" height="22" uuid="41397834-c9a4-4156-aeca-571ac283eb7e"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -99,7 +100,7 @@ ORDER BY ADM_DATE_DIS]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Hospital}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-5" x="0" y="71" width="932" height="17" uuid="884ee1eb-2d64-44cf-9a20-e8864b9e3a27"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -112,7 +113,7 @@ ORDER BY ADM_DATE_DIS]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Address} + " - " + $P{City}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-6" x="0" y="88" width="932" height="17" uuid="e56164e5-1f28-4b57-a34f-636e58fb97c1"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -125,7 +126,7 @@ ORDER BY ADM_DATE_DIS]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Email}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-7" x="0" y="105" width="932" height="17" uuid="e11a70f0-9e6d-4824-8942-98486b647d52"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -138,7 +139,7 @@ ORDER BY ADM_DATE_DIS]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Telephone}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement key="textField-8" x="65" y="122" width="64" height="17" uuid="32c54c39-778e-4d8d-b387-9ccbef07b542"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -151,7 +152,7 @@ ORDER BY ADM_DATE_DIS]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fromdate}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-1" x="0" y="122" width="65" height="17" uuid="bf0c2a23-6218-4001-9c18-ba7af5fef7fa"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -162,9 +163,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[From]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{From}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-2" x="129" y="122" width="65" height="17" uuid="78865b48-1b7a-4550-9ebe-505e0922fafe"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -175,9 +176,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[To]]></text>
-			</staticText>
-			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="false">
+				<textFieldExpression><![CDATA[$R{To}]]></textFieldExpression>
+			</textField>
+			<textField textAdjust="StretchHeight" pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement key="textField-9" x="194" y="122" width="64" height="17" uuid="b6ace74f-5a80-4aa7-a7d4-790246e82ffc"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -204,7 +205,7 @@ ORDER BY ADM_DATE_DIS]]>
 	</title>
 	<pageHeader>
 		<band height="28" splitType="Stretch">
-			<staticText>
+			<textField>
 				<reportElement key="staticText-3" mode="Opaque" x="0" y="0" width="50" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="83c6552b-feac-4212-9fe1-305d762468df"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -215,9 +216,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[IPD]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA["IPD"]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-6" mode="Opaque" x="98" y="0" width="80" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="7dd74e99-246f-4dfb-aa5b-1b39fe1710fc"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -228,9 +229,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[CITY]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{City}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-7" mode="Opaque" x="178" y="0" width="80" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="26d7b60e-a231-480f-a722-1e01e5f0ef95"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -241,9 +242,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[ADDRESS]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Address}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-8" mode="Opaque" x="258" y="0" width="23" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="88042457-cb8e-46d7-89c4-712bc19ea37b"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -254,9 +255,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[SEX	]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{SEX}+"	"]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-9" mode="Opaque" x="281" y="0" width="35" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="ec03b704-4c92-42ea-9438-efb76801385a"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -267,9 +268,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[AGE]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Age}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-10" mode="Opaque" x="358" y="0" width="80" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="c6252359-0d4d-4ca6-bcb3-6988bfc9838f"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -280,9 +281,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[DATE_ADM]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{DATE_ADM}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-11" mode="Opaque" x="438" y="0" width="87" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="2fc28a75-f3a7-4e4f-9f82-fabb7b50dfc2"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -293,9 +294,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[WARD]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Ward}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-12" mode="Opaque" x="525" y="0" width="80" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="4eb601b3-1c28-454a-8e47-2d5e19013151"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -306,9 +307,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[DATE_DIS]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{DATE_DIS}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-13" mode="Opaque" x="605" y="0" width="43" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="544d4ffe-d122-44b7-b0d9-e1f165052213"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -319,9 +320,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[CODE]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Code}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-14" mode="Opaque" x="648" y="0" width="148" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="9ecc5d74-a2b9-4ae0-97f2-e7986601ea08"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -332,9 +333,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[DISEASE]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Disease}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-15" mode="Opaque" x="796" y="0" width="86" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="235a019c-b647-4fc3-b919-a0b8fe2bdbc7"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -345,9 +346,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[OUTCOME]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Outcome}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-16" mode="Opaque" x="882" y="0" width="50" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="83b168b5-57f2-41aa-ac2b-6b459a4c9698"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -358,9 +359,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[LOS]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Los}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-17" mode="Opaque" x="316" y="0" width="42" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="9f12587b-4ca2-41bb-be52-050eb2d0d311"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -371,9 +372,9 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[DAYS]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Days}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-18" mode="Opaque" x="50" y="0" width="48" height="19" forecolor="#FFFFFF" backcolor="#009900" uuid="e906bb73-88e5-46de-968f-7ff1611f9e1d"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -384,8 +385,8 @@ ORDER BY ADM_DATE_DIS]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[PAT]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{PAT}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
