--- a/rpt/ProductLedger_multi.jrxml
+++ b/rpt/ProductLedger_multi.jrxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ProductLedger_multi" pageWidth="842" pageHeight="595" columnWidth="782" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isSummaryNewPage="true" resourceBundle="ProductLedger" whenResourceMissingType="Key" uuid="becf25da-2b38-446a-92d6-811b2d2176b8">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
@@ -101,7 +102,7 @@ ORDER BY LENGTH(MDSR_CODE) ASC, MDSR_CODE ASC, MDSR_DESC ASC]]>
 					<subreportParameterExpression><![CDATA[$P{SUBREPORT_DIR}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ProductLedger_multi_subreport.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ProductLedger.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
@@ -140,10 +141,10 @@ ORDER BY LENGTH(MDSR_CODE) ASC, MDSR_CODE ASC, MDSR_DESC ASC]]>
 					<subreportParameterExpression><![CDATA[$P{Currency}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="Date">
-					<subreportParameterExpression><![CDATA[$P{todate}]]></subreportParameterExpression>
+					<subreportParameterExpression><![CDATA[$P{todate}.toLocaleString()]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} +  "ProductLedger_multi_subreport2.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} +  "PharmaceuticalStock_ver5.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 	</summary>
