Added new StockWardLedger report
TODO: create button in Pharmaceutical Wards

--- a/rpt/ProductLedgerWard.jrxml
+++ b/rpt/ProductLedgerWard.jrxml
@@ -44,7 +44,7 @@
 			FROM MEDICALDSRSTOCKMOV
 			LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
 			WHERE MMVT_TYPE LIKE '%-%'
-			AND DATE(MMV_DATE) < $P{fromdate}
+			AND DATE(MMV_DATE) < DATE($P{fromdate})
 			AND MMV_WRD_ID_A = $P{WardCode}
 			AND MMV_MDSR_ID = $P{productID}
 			GROUP BY MMV_MDSR_ID) AS IN_QTY,
@@ -54,7 +54,7 @@
 			LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
 			LEFT JOIN MEDICALDSRlot ON MMV_LT_ID_A = LT_ID_A
 			WHERE MMVT_TYPE LIKE '%-%'
-			AND DATE(MMV_DATE) < $P{fromdate}
+			AND DATE(MMV_DATE) < DATE($P{fromdate})
 			AND MMV_WRD_ID_A = $P{WardCode}
 			AND MMV_MDSR_ID = $P{productID}
 			GROUP BY MMV_MDSR_ID) AS COST
@@ -62,7 +62,7 @@
 	FROM MEDICALDSRSTOCKMOVWARD
 		LEFT JOIN MEDICALDSR ON MMVN_MDSR_ID = MDSR_ID
 		LEFT JOIN MEDICALDSRTYPE ON MDSR_MDSRT_ID_A = MDSRT_ID_A
-	WHERE DATE(MMVN_DATE) < $P{fromdate}
+	WHERE DATE(MMVN_DATE) < DATE($P{fromdate})
 		AND MMVN_WRD_ID_A = $P{WardCode}
 		AND MMVN_MDSR_ID = $P{productID}
 
@@ -113,7 +113,7 @@ SELECT "2" AS ORDERING_FIELD,
 					LEFT JOIN
 				MEDICALDSR ON MMVN_MDSR_ID = MDSR_ID
 			WHERE
-				DATE(MMVN_DATE) BETWEEN $P{fromdate} AND $P{todate}
+				DATE(MMVN_DATE) BETWEEN DATE($P{fromdate}) AND DATE($P{todate})
 					AND MMVN_WRD_ID_A = $P{WardCode}
 					AND MMVN_MDSR_ID = $P{productID}
 			UNION
@@ -143,7 +143,7 @@ SELECT "2" AS ORDERING_FIELD,
 				MEDICALDSRlot ON MMV_LT_ID_A = LT_ID_A
 
 			WHERE
-				DATE(MMV_DATE) BETWEEN $P{fromdate} AND $P{todate}
+				DATE(MMV_DATE) BETWEEN DATE($P{fromdate}) AND DATE($P{todate})
 					AND MMV_WRD_ID_A = $P{WardCode}
 					AND MMV_MDSR_ID = $P{productID}
 
@@ -168,7 +168,7 @@ SELECT 	"3" AS ORDERING_FIELD,
 			FROM MEDICALDSRSTOCKMOV
 			LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
 			WHERE MMVT_TYPE LIKE '%-%'
-			AND DATE(MMV_DATE) <= $P{todate}
+			AND DATE(MMV_DATE) <= DATE($P{todate})
 			AND MMV_WRD_ID_A = $P{WardCode}
 			AND MMV_MDSR_ID = $P{productID}
 			GROUP BY MMV_MDSR_ID) AS IN_QTY,
@@ -178,7 +178,7 @@ SELECT 	"3" AS ORDERING_FIELD,
 	FROM MEDICALDSRSTOCKMOVWARD
 		LEFT JOIN MEDICALDSR ON MMVN_MDSR_ID = MDSR_ID
 		LEFT JOIN MEDICALDSRTYPE ON MDSR_MDSRT_ID_A = MDSRT_ID_A
-	WHERE DATE(MMVN_DATE) <= $P{todate}
+	WHERE DATE(MMVN_DATE) <= DATE($P{todate})
 		AND MMVN_WRD_ID_A = $P{WardCode}
 		AND MMVN_MDSR_ID = $P{productID}
 ) AS BEGIN_MOV_END
