--- a/rpt/ProductLedgerWard_multi.jrxml
+++ b/rpt/ProductLedgerWard_multi.jrxml
@@ -1,72 +1,41 @@
-<?xml version="1.0" encoding="UTF-8"  ?>
-<!-- Created with iReport - A designer for JasperReports -->
-<!DOCTYPE jasperReport PUBLIC "//JasperReports//DTD Report Design//EN" "http://jasperreports.sourceforge.net/dtds/jasperreport.dtd">
-<jasperReport
-		 name="ProductLedgerWard_multi"
-		 columnCount="1"
-		 printOrder="Vertical"
-		 orientation="Portrait"
-		 pageWidth="842"
-		 pageHeight="595"
-		 columnWidth="782"
-		 columnSpacing="0"
-		 leftMargin="30"
-		 rightMargin="30"
-		 topMargin="20"
-		 bottomMargin="20"
-		 whenNoDataType="NoPages"
-		 isTitleNewPage="false"
-		 isSummaryNewPage="true"
-		 resourceBundle="ProductLedger"
-		 whenResourceMissingType="Key">
-	<property name="ireport.scriptlethandling" value="0" />
-	<property name="ireport.encoding" value="UTF-8" />
-	<import value="java.util.*" />
-	<import value="net.sf.jasperreports.engine.*" />
-	<import value="net.sf.jasperreports.engine.data.*" />
-
-	<style 
-		name="Opening"
-		isDefault="false"
-	>
-
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ProductLedgerWard_multi" pageWidth="842" pageHeight="595" whenNoDataType="NoPages" columnWidth="782" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isSummaryNewPage="true" resourceBundle="ProductLedgerWard_multi" whenResourceMissingType="Key" uuid="e91c92c6-5ad4-4043-b9e0-a1233025884b">
+	<property name="ireport.scriptlethandling" value="0"/>
+	<property name="ireport.encoding" value="UTF-8"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="oh"/>
+	<import value="net.sf.jasperreports.engine.*"/>
+	<import value="java.util.*"/>
+	<import value="net.sf.jasperreports.engine.data.*"/>
+	<style name="Opening">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[new Boolean( $F{ORDERING_FIELD}.equals( "1" ) || $F{ORDERING_FIELD}.equals( "3" ))]]></conditionExpression>
-			<style 
-				name="Opening"
-				isDefault="false"
-				border="1Point"
-				borderColor="#000000"
-				isStyledText="false"
-				isBold="true"
-				isItalic="true"
-				isUnderline="true"
-				isStrikeThrough="false"
-			>
-					<box>					<pen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+			<style markup="none" isBold="true" isItalic="true" isUnderline="true" isStrikeThrough="false">
+				<box>
+					<pen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-</box>
+				</box>
 			</style>
 		</conditionalStyle>
 	</style>
-
-	<parameter name="Hospital" isForPrompting="false" class="java.lang.String"/>
-	<parameter name="Address" isForPrompting="false" class="java.lang.String"/>
-	<parameter name="City" isForPrompting="false" class="java.lang.String"/>
-	<parameter name="Email" isForPrompting="false" class="java.lang.String"/>
-	<parameter name="Telephone" isForPrompting="false" class="java.lang.String"/>
-	<parameter name="fromdate" isForPrompting="true" class="java.lang.String"/>
-	<parameter name="todate" isForPrompting="true" class="java.lang.String"/>
-	<parameter name="Currency" isForPrompting="true" class="java.lang.String"/>
-	<parameter name="SUBREPORT_DIR" isForPrompting="false" class="java.lang.String">
-		<defaultValueExpression ><![CDATA["./"]]></defaultValueExpression>
+	<parameter name="Hospital" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="Address" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="City" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="Email" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="Telephone" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="fromdate" class="java.util.Date"/>
+	<parameter name="todate" class="java.util.Date"/>
+	<parameter name="Currency" class="java.lang.String"/>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA["./"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="WardCode" isForPrompting="true" class="java.lang.String"/>
-	<parameter name="WardName" isForPrompting="true" class="java.lang.String"/>
-	<queryString><![CDATA[SELECT MDSR_ID
+	<parameter name="WardCode" class="java.lang.String"/>
+	<parameter name="WardName" class="java.lang.String"/>
+	<queryString>
+		<![CDATA[SELECT MDSR_ID
 
  FROM (
 
@@ -82,141 +51,121 @@ FROM MEDICALDSRSTOCKMOV
 WHERE DATE(MMV_DATE) BETWEEN DATE($P{fromdate}) AND DATE($P{todate})
 AND MMV_WRD_ID_A = $P{WardCode}
 
-) AS MOVEMENTS]]></queryString>
-
+) AS MOVEMENTS]]>
+	</queryString>
 	<field name="MDSR_ID" class="java.lang.String"/>
-
-
-		<group  name="PRODUCT" isStartNewPage="true" isReprintHeaderOnEachPage="true" >
-			<groupExpression><![CDATA[$F{MDSR_ID}]]></groupExpression>
-			<groupHeader>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-			</groupHeader>
-			<groupFooter>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-			</groupFooter>
-		</group>
-		<background>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</background>
-		<title>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</title>
-		<pageHeader>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</pageHeader>
-		<columnHeader>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</columnHeader>
-		<detail>
-			<band height="66"  isSplitAllowed="true" >
-				<subreport  isUsingCache="true">
-					<reportElement
-						x="-30"
-						y="0"
-						width="842"
-						height="66"
-						key="subreport-1"/>
-					<subreportParameter  name="Hospital">
-						<subreportParameterExpression><![CDATA[$P{Hospital}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="Address">
-						<subreportParameterExpression><![CDATA[$P{Address}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="City">
-						<subreportParameterExpression><![CDATA[$P{City}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="Email">
-						<subreportParameterExpression><![CDATA[$P{Email}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="Telephone">
-						<subreportParameterExpression><![CDATA[$P{Telephone}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="fromdate">
-						<subreportParameterExpression><![CDATA[$P{fromdate}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="todate">
-						<subreportParameterExpression><![CDATA[$P{todate}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="productID">
-						<subreportParameterExpression><![CDATA[String.valueOf($F{MDSR_ID})]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="Currency">
-						<subreportParameterExpression><![CDATA[$P{Currency}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="WardCode">
-						<subreportParameterExpression><![CDATA[$P{WardCode}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="WardName">
-						<subreportParameterExpression><![CDATA[$P{WardName}]]></subreportParameterExpression>
-					</subreportParameter>
-					<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-					<subreportExpression  class="java.lang.String"><![CDATA[$P{SUBREPORT_DIR} + "ProductLedgerWard.jasper"]]></subreportExpression>
-				</subreport>
-			</band>
-		</detail>
-		<columnFooter>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</columnFooter>
-		<pageFooter>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</pageFooter>
-		<summary>
-			<band height="100"  isSplitAllowed="true" >
-				<subreport  isUsingCache="true">
-					<reportElement
-						x="-30"
-						y="0"
-						width="842"
-						height="100"
-						key="subreport-2"/>
-					<subreportParameter  name="Hospital">
-						<subreportParameterExpression><![CDATA[$P{Hospital}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="Address">
-						<subreportParameterExpression><![CDATA[$P{Address}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="City">
-						<subreportParameterExpression><![CDATA[$P{City}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="Email">
-						<subreportParameterExpression><![CDATA[$P{Email}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="Telephone">
-						<subreportParameterExpression><![CDATA[$P{Telephone}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="fromdate">
-						<subreportParameterExpression><![CDATA[$P{fromdate}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="todate">
-						<subreportParameterExpression><![CDATA[$P{todate}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="Currency">
-						<subreportParameterExpression><![CDATA[$P{Currency}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="WardCode">
-						<subreportParameterExpression><![CDATA[$P{WardCode}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="Ward">
-						<subreportParameterExpression><![CDATA[$P{WardName}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="Date">
-						<subreportParameterExpression><![CDATA[$P{todate}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter  name="DateReport">
-						<subreportParameterExpression><![CDATA[$P{todate}]]></subreportParameterExpression>
-					</subreportParameter>
-					<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-					<subreportExpression  class="java.lang.String"><![CDATA[$P{SUBREPORT_DIR} + "PharmaceuticalStockWard.jasper"]]></subreportExpression>
-				</subreport>
-			</band>
-		</summary>
+	<group name="PRODUCT" isStartNewPage="true" isReprintHeaderOnEachPage="true">
+		<groupExpression><![CDATA[$F{MDSR_ID}]]></groupExpression>
+		<groupHeader>
+			<band splitType="Stretch"/>
+		</groupHeader>
+		<groupFooter>
+			<band splitType="Stretch"/>
+		</groupFooter>
+	</group>
+	<background>
+		<band splitType="Stretch"/>
+	</background>
+	<title>
+		<band splitType="Stretch"/>
+	</title>
+	<pageHeader>
+		<band splitType="Stretch"/>
+	</pageHeader>
+	<columnHeader>
+		<band splitType="Stretch"/>
+	</columnHeader>
+	<detail>
+		<band height="66" splitType="Stretch">
+			<subreport isUsingCache="true">
+				<reportElement key="subreport-1" x="-30" y="0" width="842" height="66" uuid="669b6eaa-a7da-4bfb-a5f2-df0fc8df624c"/>
+				<subreportParameter name="Hospital">
+					<subreportParameterExpression><![CDATA[$P{Hospital}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Address">
+					<subreportParameterExpression><![CDATA[$P{Address}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="City">
+					<subreportParameterExpression><![CDATA[$P{City}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Email">
+					<subreportParameterExpression><![CDATA[$P{Email}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Telephone">
+					<subreportParameterExpression><![CDATA[$P{Telephone}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="fromdate">
+					<subreportParameterExpression><![CDATA[$P{fromdate}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="todate">
+					<subreportParameterExpression><![CDATA[$P{todate}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="productID">
+					<subreportParameterExpression><![CDATA[String.valueOf($F{MDSR_ID})]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Currency">
+					<subreportParameterExpression><![CDATA[$P{Currency}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="WardCode">
+					<subreportParameterExpression><![CDATA[$P{WardCode}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="WardName">
+					<subreportParameterExpression><![CDATA[$P{WardName}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ProductLedgerWard.jasper"]]></subreportExpression>
+			</subreport>
+		</band>
+	</detail>
+	<columnFooter>
+		<band splitType="Stretch"/>
+	</columnFooter>
+	<pageFooter>
+		<band splitType="Stretch"/>
+	</pageFooter>
+	<summary>
+		<band height="100" splitType="Stretch">
+			<subreport isUsingCache="true">
+				<reportElement key="subreport-2" x="-30" y="0" width="842" height="100" uuid="48273c10-837f-48f0-8da5-7f05e6ed59b7"/>
+				<subreportParameter name="Hospital">
+					<subreportParameterExpression><![CDATA[$P{Hospital}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Address">
+					<subreportParameterExpression><![CDATA[$P{Address}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="City">
+					<subreportParameterExpression><![CDATA[$P{City}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Email">
+					<subreportParameterExpression><![CDATA[$P{Email}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Telephone">
+					<subreportParameterExpression><![CDATA[$P{Telephone}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="fromdate">
+					<subreportParameterExpression><![CDATA[$P{fromdate}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="todate">
+					<subreportParameterExpression><![CDATA[$P{todate}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Currency">
+					<subreportParameterExpression><![CDATA[$P{Currency}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="WardCode">
+					<subreportParameterExpression><![CDATA[$P{WardCode}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Ward">
+					<subreportParameterExpression><![CDATA[$P{WardName}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="Date">
+					<subreportParameterExpression><![CDATA[$P{todate}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="DateReport">
+					<subreportParameterExpression><![CDATA[$P{todate}.toLocaleString()]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "PharmaceuticalStockWard.jasper"]]></subreportExpression>
+			</subreport>
+		</band>
+	</summary>
 </jasperReport>
