OP-350 Fixed some reports for compliance with only_full_group_by

--- a/rpt/BillsReportMonthly.jrxml
+++ b/rpt/BillsReportMonthly.jrxml
@@ -31,6 +31,7 @@ FROM
 (
 SELECT 	BLL_ID,
 		BLL_DATE,
+		"" AS X,
 		BLL_AMOUNT AS BILLED,
 		0 AS INCOME,
 		BLL_BALANCE AS BALANCE
@@ -42,6 +43,7 @@ UNION
 
 SELECT 	BLL_ID,
 		BLP_DATE AS BLL_DATE,
+		BLL_DATE AS X,
 		0 AS BILLED,
         BLP_AMOUNT AS INCOME,
 		0 AS BALANCE
