--- a/rpt/OH004_IncomesAllByPriceCodes.jrxml
+++ b/rpt/OH004_IncomesAllByPriceCodes.jrxml
@@ -20,12 +20,13 @@
 		<defaultValueExpression><![CDATA["./rsc/images/"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT BLL_DATE, BLI_ITEM_DESC, SUM(BLI_QTY) AS QTY, SUM(BLI_ITEM_AMOUNT * BLI_QTY) AS AMOUNT
+		<![CDATA[SELECT BLL_DATE, BLI_ITEM_DESC, QTY, AMOUNT
+FROM (SELECT BLL_DATE, BLI_ITEM_DESC, SUM(BLI_QTY) AS QTY, SUM(BLI_ITEM_AMOUNT * BLI_QTY) AS AMOUNT
 FROM BILLITEMS
 JOIN BILLS ON BLI_ID_BILL = BLL_ID
 WHERE BLL_STATUS = 'C'
 AND DATE(BLL_UPDATE) BETWEEN DATE($P{fromdate}) AND DATE($P{todate})
-GROUP BY BLI_ITEM_DESC
+GROUP BY BLI_ITEM_DESC) AS InnerTable 
 ORDER BY AMOUNT DESC]]>
 	</queryString>
 	<field name="BLL_DATE" class="java.sql.Timestamp"/>
